using javax.inject unnamed module